<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.pfe.predictive</groupId>
        <artifactId>predictive-maintenance-backend</artifactId>
        <version>1.0.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>api-module</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <name>API Module</name>
    <description>REST API Main Application - Entry point</description>

    <dependencies>
        <!-- ============= INTERNAL MODULES ============= -->
        
        <!-- Core Module -->
        <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>core-module</artifactId>
            <version>1.0.0</version>
        </dependency>
        <!-- Common Module -->
        <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>common-module</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- Data Module -->
        <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>data-module</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- Alert Module -->
        <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>alert-module</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- Inventory Module -->
        <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>inventory-module</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- NLP Module -->
        <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>nlp-module</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- User Module -->
        <!-- TEMPORARILY EXCLUDED DUE TO PRE-EXISTING COMPILATION ERRORS -->
        <!-- <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>user-module</artifactId>
            <version>1.0.0</version>
        </dependency> -->

        <!-- Machine Module -->
        <!-- TEMPORARILY EXCLUDED DUE TO PRE-EXISTING COMPILATION ERRORS -->
        <!-- <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>machine-module</artifactId>
            <version>1.0.0</version>
        </dependency> -->

        <!-- Maintenance Module -->
        <!-- TEMPORARILY EXCLUDED DUE TO PRE-EXISTING COMPILATION ERRORS -->
        <!-- <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>maintenance-module</artifactId>
            <version>1.0.0</version>
        </dependency> -->

        <!-- Prediction Module -->
        <!-- TEMPORARILY EXCLUDED DUE TO DEPENDENCY ON EXCLUDED MODULES -->
        <!-- <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>prediction-module</artifactId>
            <version>1.0.0</version>
        </dependency> -->

        <!-- ML Module -->
        <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>ml-module</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- Dashboard Module -->
        <!-- TEMPORARILY EXCLUDED DUE TO PRE-EXISTING COMPILATION ERRORS -->
        <!-- <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>dashboard-module</artifactId>
            <version>1.0.0</version>
        </dependency> -->

        <!-- Task Module -->
        <dependency>
            <groupId>com.pfe.predictive</groupId>
            <artifactId>task-module</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- ============= SPRING BOOT STARTERS ============= -->
        
        <!-- Spring Boot Web -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Spring Boot Data JPA -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- Spring Security -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- Spring Boot Validation -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- Spring Boot WebSocket -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>

        <!-- ============= DATABASE ============= -->
        
        <!-- PostgreSQL Driver -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- ============= DATABASE MIGRATION ============= -->
        
        <!-- Flyway Core -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
        </dependency>


        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- JWT Jackson Support -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- ============= UTILITIES ============= -->

        <!-- SpringDoc OpenAPI (Swagger 3.0) -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        </dependency>

        <!-- Load .env values into Spring Environment -->
        <dependency>
            <groupId>me.paulschwarz</groupId>
            <artifactId>spring-dotenv</artifactId>
            <version>4.0.0</version>
        </dependency>
        
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- ============= TESTING ============= -->
        
        <!-- Spring Boot Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        
        <plugins>
            <!-- Spring Boot Maven Plugin - ENABLED for repackage -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>com.pfe.predictive.PredictiveMaintenanceApplication</mainClass>
                    <!-- spring-boot:run otherwise forks the app with its working
                         directory set to this module (api-module/), regardless of
                         where `mvn` itself was invoked from. .env lives at the repo
                         root, so without this the app can't find it and JWT_SECRET
                         (and every other .env value) resolves empty. -->
                    <workingDirectory>${project.parent.basedir}</workingDirectory>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>